# src/modules/cars/entities/Specification.ts
@@ -1,9 +1,18 @@
+import { Column, CreateDateColumn, Entity, PrimaryColumn } from 'typeorm'
 import { v4 } from 'uuid'
 
+@Entity('specifications')
 class Specification {
+  @PrimaryColumn('uuid')
   id?: string
+
+  @Column()
   name: string
+
+  @Column()
   description: string
+
+  @CreateDateColumn()
   created_at: Date
 
   constructor() {
