# src/modules/cars/useCases/listCategories/ListCategoriesController.ts
@@ -1,11 +1,12 @@
 import { Request, Response } from 'express'
+import { container } from 'tsyringe'
 import { ListCategoriesUseCase } from './ListCategoriesUseCase'
 
 class ListCategoriesController {
-  constructor(private listCategoriesUseCase: ListCategoriesUseCase) {}
-
   public async handle(request: Request, response: Response): Promise<Response> {
-    const categories = this.listCategoriesUseCase.execute()
+    const listCategoriesUseCase = container.resolve(ListCategoriesUseCase)
+
+    const categories = await listCategoriesUseCase.execute()
 
     return response.json(categories)
   }
