# src/routes/categories.routes.ts
@@ -1,24 +1,26 @@
 import { Router } from 'express'
-import createCategoriesController from '../modules/cars/useCases/createCategory'
-import { listCategoriesController } from '../modules/cars/useCases/listCategories'
 import multer from 'multer'
-import { importCategoriesController } from '../modules/cars/useCases/importCategory'
+
+import { CreateCategoriesController } from '../modules/cars/useCases/createCategory/CreateCategoriesController'
+import { ImportCategoriesController } from '../modules/cars/useCases/importCategory/ImportCategoriesController'
+import { ListCategoriesController } from '../modules/cars/useCases/listCategories/ListCategoriesController'
 
 const categoriesRouter = Router()
 
 const upload = multer({
   dest: './tmp'
 })
+const createCategoryController = new CreateCategoriesController()
+const listCategoriesController = new ListCategoriesController()
+const importCategoriesController = new ImportCategoriesController()
 
-categoriesRouter.post('/', (request, response) =>
-  createCategoriesController().handle(request, response)
-)
-categoriesRouter.get('/', (request, response) =>
-  listCategoriesController.handle(request, response)
-)
+categoriesRouter.post('/', createCategoryController.handle)
+categoriesRouter.get('/', listCategoriesController.handle)
 
-categoriesRouter.post('/import', upload.single('file'), (request, response) =>
-  importCategoriesController.handle(request, response)
+categoriesRouter.post(
+  '/import',
+  upload.single('file'),
+  importCategoriesController.handle
 )
 
 export { categoriesRouter }
